--- a/src/ros2_get_obj_distance/package.xml
+++ b/src/ros2_get_obj_distance/package.xml
@@ -16,8 +16,10 @@
   <build_depend>image_transport</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>visualization_msgs</build_depend>
   <build_depend>qos</build_depend>
+
+  <depend>yolov8_msgs</depend>
+  <depend>geometry_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
